--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.0-rc-116'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.40'
 }
 
 group 'com.xenji.homee.kafka'
@@ -15,7 +15,7 @@ repositories {
 
 dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    compile 'org.apache.kafka:kafka-streams:2.0.0'
+    compile 'org.apache.kafka:kafka-streams:2.2.1'
     implementation 'com.beust:klaxon:3.0.1'
 }
 
@@ -24,4 +24,9 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+wrapper {
+    gradleVersion = "5.4.1"
+    distributionType = Wrapper.DistributionType.ALL
 }
